; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/mips/extr_hevc_mc_uni_msa.c_hevc_hv_uni_4t_4multx8mult_msa.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/mips/extr_hevc_mc_uni_msa.c_hevc_hv_uni_4t_4multx8mult_msa.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ff_hevc_mask_arr = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32, i32*, i32, i32*, i32*, i32)* @hevc_hv_uni_4t_4multx8mult_msa to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @hevc_hv_uni_4t_4multx8mult_msa(i32* %0, i32 %1, i32* %2, i32 %3, i32* %4, i32* %5, i32 %6) #0 {
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32*, align 8
  %13 = alloca i32*, align 8
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  %16 = alloca i32, align 4
  %17 = alloca i32, align 4
  %18 = alloca i64, align 8
  %19 = alloca i64, align 8
  %20 = alloca i64, align 8
  %21 = alloca i64, align 8
  %22 = alloca i64, align 8
  %23 = alloca i64, align 8
  %24 = alloca i64, align 8
  %25 = alloca i64, align 8
  %26 = alloca i64, align 8
  %27 = alloca i64, align 8
  %28 = alloca i64, align 8
  %29 = alloca i64, align 8
  %30 = alloca i64, align 8
  %31 = alloca i64, align 8
  %32 = alloca i64, align 8
  %33 = alloca i64, align 8
  %34 = alloca i64, align 8
  %35 = alloca i64, align 8
  %36 = alloca i64, align 8
  %37 = alloca i64, align 8
  %38 = alloca i64, align 8
  %39 = alloca i64, align 8
  %40 = alloca i64, align 8
  %41 = alloca i64, align 8
  %42 = alloca i64, align 8
  %43 = alloca i64, align 8
  %44 = alloca i64, align 8
  %45 = alloca i64, align 8
  %46 = alloca i64, align 8
  %47 = alloca i64, align 8
  %48 = alloca i64, align 8
  %49 = alloca i64, align 8
  %50 = alloca i64, align 8
  %51 = alloca i64, align 8
  %52 = alloca i64, align 8
  %53 = alloca i64, align 8
  %54 = alloca i64, align 8
  %55 = alloca i32, align 4
  %56 = alloca i32, align 4
  %57 = alloca i32, align 4
  %58 = alloca i32, align 4
  %59 = alloca i32, align 4
  %60 = alloca i32, align 4
  %61 = alloca i32, align 4
  %62 = alloca i32, align 4
  %63 = alloca i64, align 8
  %64 = alloca i64, align 8
  %65 = alloca i64, align 8
  %66 = alloca i64, align 8
  %67 = alloca i64, align 8
  %68 = alloca i64, align 8
  %69 = alloca i64, align 8
  %70 = alloca i64, align 8
  %71 = alloca i64, align 8
  %72 = alloca i64, align 8
  store i32* %0, i32** %8, align 8
  store i32 %1, i32* %9, align 4
  store i32* %2, i32** %10, align 8
  store i32 %3, i32* %11, align 4
  store i32* %4, i32** %12, align 8
  store i32* %5, i32** %13, align 8
  store i32 %6, i32* %14, align 4
  %73 = load i64, i64* @ff_hevc_mask_arr, align 8
  %74 = add nsw i64 %73, 16
  %75 = call i64 @LD_SB(i64 %74)
  store i64 %75, i64* %33, align 8
  %76 = load i32, i32* %9, align 4
  %77 = add nsw i32 %76, 1
  %78 = load i32*, i32** %8, align 8
  %79 = sext i32 %77 to i64
  %80 = sub i64 0, %79
  %81 = getelementptr inbounds i32, i32* %78, i64 %80
  store i32* %81, i32** %8, align 8
  %82 = load i32*, i32** %12, align 8
  %83 = call i64 @LD_SH(i32* %82)
  store i64 %83, i64* %35, align 8
  %84 = load i64, i64* %35, align 8
  %85 = load i64, i64* %29, align 8
  %86 = load i64, i64* %30, align 8
  %87 = call i32 @SPLATI_H2_SH(i64 %84, i32 0, i32 1, i64 %85, i64 %86)
  %88 = load i32*, i32** %13, align 8
  %89 = call i64 @LD_SH(i32* %88)
  store i64 %89, i64* %35, align 8
  %90 = load i64, i64* %35, align 8
  %91 = load i64, i64* %35, align 8
  %92 = call i32 @UNPCK_R_SB_SH(i64 %90, i64 %91)
  %93 = load i64, i64* %35, align 8
  %94 = load i64, i64* %31, align 8
  %95 = load i64, i64* %32, align 8
  %96 = call i32 @SPLATI_W2_SH(i64 %93, i32 0, i64 %94, i64 %95)
  %97 = load i64, i64* %33, align 8
  %98 = add nsw i64 %97, 2
  store i64 %98, i64* %34, align 8
  %99 = load i32*, i32** %8, align 8
  %100 = load i32, i32* %9, align 4
  %101 = load i64, i64* %18, align 8
  %102 = load i64, i64* %19, align 8
  %103 = load i64, i64* %20, align 8
  %104 = call i32 @LD_SB3(i32* %99, i32 %100, i64 %101, i64 %102, i64 %103)
  %105 = load i32, i32* %9, align 4
  %106 = mul nsw i32 3, %105
  %107 = load i32*, i32** %8, align 8
  %108 = sext i32 %106 to i64
  %109 = getelementptr inbounds i32, i32* %107, i64 %108
  store i32* %109, i32** %8, align 8
  %110 = load i64, i64* %18, align 8
  %111 = load i64, i64* %19, align 8
  %112 = load i64, i64* %20, align 8
  %113 = call i32 @XORI_B3_128_SB(i64 %110, i64 %111, i64 %112)
  %114 = load i64, i64* %18, align 8
  %115 = load i64, i64* %19, align 8
  %116 = load i64, i64* %18, align 8
  %117 = load i64, i64* %19, align 8
  %118 = load i64, i64* %33, align 8
  %119 = load i64, i64* %34, align 8
  %120 = load i64, i64* %40, align 8
  %121 = load i64, i64* %41, align 8
  %122 = call i32 @VSHF_B2_SB(i64 %114, i64 %115, i64 %116, i64 %117, i64 %118, i64 %119, i64 %120, i64 %121)
  %123 = load i64, i64* %19, align 8
  %124 = load i64, i64* %20, align 8
  %125 = load i64, i64* %19, align 8
  %126 = load i64, i64* %20, align 8
  %127 = load i64, i64* %33, align 8
  %128 = load i64, i64* %34, align 8
  %129 = load i64, i64* %42, align 8
  %130 = load i64, i64* %43, align 8
  %131 = call i32 @VSHF_B2_SB(i64 %123, i64 %124, i64 %125, i64 %126, i64 %127, i64 %128, i64 %129, i64 %130)
  %132 = load i64, i64* %40, align 8
  %133 = load i64, i64* %41, align 8
  %134 = load i64, i64* %29, align 8
  %135 = load i64, i64* %30, align 8
  %136 = call i64 @HEVC_FILT_4TAP_SH(i64 %132, i64 %133, i64 %134, i64 %135)
  store i64 %136, i64* %48, align 8
  %137 = load i64, i64* %42, align 8
  %138 = load i64, i64* %43, align 8
  %139 = load i64, i64* %29, align 8
  %140 = load i64, i64* %30, align 8
  %141 = call i64 @HEVC_FILT_4TAP_SH(i64 %137, i64 %138, i64 %139, i64 %140)
  store i64 %141, i64* %49, align 8
  %142 = load i64, i64* %49, align 8
  %143 = load i64, i64* %48, align 8
  %144 = load i64, i64* %63, align 8
  %145 = load i64, i64* %67, align 8
  %146 = call i32 @ILVRL_H2_SH(i64 %142, i64 %143, i64 %144, i64 %145)
  %147 = load i64, i64* %49, align 8
  %148 = trunc i64 %147 to i32
  %149 = call i64 @__msa_splati_d(i32 %148, i32 1)
  store i64 %149, i64* %50, align 8
  %150 = load i32, i32* %14, align 4
  %151 = ashr i32 %150, 3
  store i32 %151, i32* %15, align 4
  br label %152

152:                                              ; preds = %156, %7
  %153 = load i32, i32* %15, align 4
  %154 = add nsw i32 %153, -1
  store i32 %154, i32* %15, align 4
  %155 = icmp ne i32 %153, 0
  br i1 %155, label %156, label %356

156:                                              ; preds = %152
  %157 = load i32*, i32** %8, align 8
  %158 = load i32, i32* %9, align 4
  %159 = load i64, i64* %21, align 8
  %160 = load i64, i64* %22, align 8
  %161 = load i64, i64* %23, align 8
  %162 = load i64, i64* %24, align 8
  %163 = load i64, i64* %25, align 8
  %164 = load i64, i64* %26, align 8
  %165 = load i64, i64* %27, align 8
  %166 = load i64, i64* %28, align 8
  %167 = call i32 @LD_SB8(i32* %157, i32 %158, i64 %159, i64 %160, i64 %161, i64 %162, i64 %163, i64 %164, i64 %165, i64 %166)
  %168 = load i32, i32* %9, align 4
  %169 = mul nsw i32 8, %168
  %170 = load i32*, i32** %8, align 8
  %171 = sext i32 %169 to i64
  %172 = getelementptr inbounds i32, i32* %170, i64 %171
  store i32* %172, i32** %8, align 8
  %173 = load i64, i64* %21, align 8
  %174 = load i64, i64* %22, align 8
  %175 = load i64, i64* %23, align 8
  %176 = load i64, i64* %24, align 8
  %177 = load i64, i64* %25, align 8
  %178 = load i64, i64* %26, align 8
  %179 = load i64, i64* %27, align 8
  %180 = load i64, i64* %28, align 8
  %181 = call i32 @XORI_B8_128_SB(i64 %173, i64 %174, i64 %175, i64 %176, i64 %177, i64 %178, i64 %179, i64 %180)
  %182 = load i64, i64* %21, align 8
  %183 = load i64, i64* %25, align 8
  %184 = load i64, i64* %21, align 8
  %185 = load i64, i64* %25, align 8
  %186 = load i64, i64* %33, align 8
  %187 = load i64, i64* %34, align 8
  %188 = load i64, i64* %40, align 8
  %189 = load i64, i64* %41, align 8
  %190 = call i32 @VSHF_B2_SB(i64 %182, i64 %183, i64 %184, i64 %185, i64 %186, i64 %187, i64 %188, i64 %189)
  %191 = load i64, i64* %22, align 8
  %192 = load i64, i64* %26, align 8
  %193 = load i64, i64* %22, align 8
  %194 = load i64, i64* %26, align 8
  %195 = load i64, i64* %33, align 8
  %196 = load i64, i64* %34, align 8
  %197 = load i64, i64* %42, align 8
  %198 = load i64, i64* %43, align 8
  %199 = call i32 @VSHF_B2_SB(i64 %191, i64 %192, i64 %193, i64 %194, i64 %195, i64 %196, i64 %197, i64 %198)
  %200 = load i64, i64* %23, align 8
  %201 = load i64, i64* %27, align 8
  %202 = load i64, i64* %23, align 8
  %203 = load i64, i64* %27, align 8
  %204 = load i64, i64* %33, align 8
  %205 = load i64, i64* %34, align 8
  %206 = load i64, i64* %44, align 8
  %207 = load i64, i64* %45, align 8
  %208 = call i32 @VSHF_B2_SB(i64 %200, i64 %201, i64 %202, i64 %203, i64 %204, i64 %205, i64 %206, i64 %207)
  %209 = load i64, i64* %24, align 8
  %210 = load i64, i64* %28, align 8
  %211 = load i64, i64* %24, align 8
  %212 = load i64, i64* %28, align 8
  %213 = load i64, i64* %33, align 8
  %214 = load i64, i64* %34, align 8
  %215 = load i64, i64* %46, align 8
  %216 = load i64, i64* %47, align 8
  %217 = call i32 @VSHF_B2_SB(i64 %209, i64 %210, i64 %211, i64 %212, i64 %213, i64 %214, i64 %215, i64 %216)
  %218 = load i64, i64* %40, align 8
  %219 = load i64, i64* %41, align 8
  %220 = load i64, i64* %29, align 8
  %221 = load i64, i64* %30, align 8
  %222 = call i64 @HEVC_FILT_4TAP_SH(i64 %218, i64 %219, i64 %220, i64 %221)
  store i64 %222, i64* %51, align 8
  %223 = load i64, i64* %42, align 8
  %224 = load i64, i64* %43, align 8
  %225 = load i64, i64* %29, align 8
  %226 = load i64, i64* %30, align 8
  %227 = call i64 @HEVC_FILT_4TAP_SH(i64 %223, i64 %224, i64 %225, i64 %226)
  store i64 %227, i64* %52, align 8
  %228 = load i64, i64* %44, align 8
  %229 = load i64, i64* %45, align 8
  %230 = load i64, i64* %29, align 8
  %231 = load i64, i64* %30, align 8
  %232 = call i64 @HEVC_FILT_4TAP_SH(i64 %228, i64 %229, i64 %230, i64 %231)
  store i64 %232, i64* %53, align 8
  %233 = load i64, i64* %46, align 8
  %234 = load i64, i64* %47, align 8
  %235 = load i64, i64* %29, align 8
  %236 = load i64, i64* %30, align 8
  %237 = call i64 @HEVC_FILT_4TAP_SH(i64 %233, i64 %234, i64 %235, i64 %236)
  store i64 %237, i64* %54, align 8
  %238 = load i64, i64* %51, align 8
  %239 = load i64, i64* %50, align 8
  %240 = call i64 @__msa_ilvr_h(i64 %238, i64 %239)
  store i64 %240, i64* %64, align 8
  %241 = load i64, i64* %52, align 8
  %242 = load i64, i64* %51, align 8
  %243 = load i64, i64* %68, align 8
  %244 = load i64, i64* %70, align 8
  %245 = call i32 @ILVRL_H2_SH(i64 %241, i64 %242, i64 %243, i64 %244)
  %246 = load i64, i64* %53, align 8
  %247 = load i64, i64* %52, align 8
  %248 = load i64, i64* %65, align 8
  %249 = load i64, i64* %71, align 8
  %250 = call i32 @ILVRL_H2_SH(i64 %246, i64 %247, i64 %248, i64 %249)
  %251 = load i64, i64* %54, align 8
  %252 = load i64, i64* %53, align 8
  %253 = load i64, i64* %69, align 8
  %254 = load i64, i64* %72, align 8
  %255 = call i32 @ILVRL_H2_SH(i64 %251, i64 %252, i64 %253, i64 %254)
  %256 = load i64, i64* %51, align 8
  %257 = trunc i64 %256 to i32
  %258 = call i64 @__msa_splati_d(i32 %257, i32 1)
  store i64 %258, i64* %50, align 8
  %259 = load i64, i64* %50, align 8
  %260 = load i64, i64* %54, align 8
  %261 = call i64 @__msa_ilvr_h(i64 %259, i64 %260)
  store i64 %261, i64* %66, align 8
  %262 = load i64, i64* %63, align 8
  %263 = load i64, i64* %64, align 8
  %264 = load i64, i64* %31, align 8
  %265 = load i64, i64* %32, align 8
  %266 = call i32 @HEVC_FILT_4TAP(i64 %262, i64 %263, i64 %264, i64 %265)
  store i32 %266, i32* %55, align 4
  %267 = load i64, i64* %67, align 8
  %268 = load i64, i64* %68, align 8
  %269 = load i64, i64* %31, align 8
  %270 = load i64, i64* %32, align 8
  %271 = call i32 @HEVC_FILT_4TAP(i64 %267, i64 %268, i64 %269, i64 %270)
  store i32 %271, i32* %56, align 4
  %272 = load i64, i64* %64, align 8
  %273 = load i64, i64* %65, align 8
  %274 = load i64, i64* %31, align 8
  %275 = load i64, i64* %32, align 8
  %276 = call i32 @HEVC_FILT_4TAP(i64 %272, i64 %273, i64 %274, i64 %275)
  store i32 %276, i32* %57, align 4
  %277 = load i64, i64* %68, align 8
  %278 = load i64, i64* %69, align 8
  %279 = load i64, i64* %31, align 8
  %280 = load i64, i64* %32, align 8
  %281 = call i32 @HEVC_FILT_4TAP(i64 %277, i64 %278, i64 %279, i64 %280)
  store i32 %281, i32* %58, align 4
  %282 = load i64, i64* %65, align 8
  %283 = load i64, i64* %66, align 8
  %284 = load i64, i64* %31, align 8
  %285 = load i64, i64* %32, align 8
  %286 = call i32 @HEVC_FILT_4TAP(i64 %282, i64 %283, i64 %284, i64 %285)
  store i32 %286, i32* %59, align 4
  %287 = load i64, i64* %69, align 8
  %288 = load i64, i64* %70, align 8
  %289 = load i64, i64* %31, align 8
  %290 = load i64, i64* %32, align 8
  %291 = call i32 @HEVC_FILT_4TAP(i64 %287, i64 %288, i64 %289, i64 %290)
  store i32 %291, i32* %60, align 4
  %292 = load i64, i64* %66, align 8
  %293 = load i64, i64* %71, align 8
  %294 = load i64, i64* %31, align 8
  %295 = load i64, i64* %32, align 8
  %296 = call i32 @HEVC_FILT_4TAP(i64 %292, i64 %293, i64 %294, i64 %295)
  store i32 %296, i32* %61, align 4
  %297 = load i64, i64* %70, align 8
  %298 = load i64, i64* %72, align 8
  %299 = load i64, i64* %31, align 8
  %300 = load i64, i64* %32, align 8
  %301 = call i32 @HEVC_FILT_4TAP(i64 %297, i64 %298, i64 %299, i64 %300)
  store i32 %301, i32* %62, align 4
  %302 = load i32, i32* %55, align 4
  %303 = load i32, i32* %56, align 4
  %304 = load i32, i32* %57, align 4
  %305 = load i32, i32* %58, align 4
  %306 = call i32 @SRA_4V(i32 %302, i32 %303, i32 %304, i32 %305, i32 6)
  %307 = load i32, i32* %59, align 4
  %308 = load i32, i32* %60, align 4
  %309 = load i32, i32* %61, align 4
  %310 = load i32, i32* %62, align 4
  %311 = call i32 @SRA_4V(i32 %307, i32 %308, i32 %309, i32 %310, i32 6)
  %312 = load i32, i32* %56, align 4
  %313 = load i32, i32* %55, align 4
  %314 = load i32, i32* %58, align 4
  %315 = load i32, i32* %57, align 4
  %316 = load i32, i32* %60, align 4
  %317 = load i32, i32* %59, align 4
  %318 = load i32, i32* %62, align 4
  %319 = load i32, i32* %61, align 4
  %320 = load i64, i64* %36, align 8
  %321 = load i64, i64* %37, align 8
  %322 = load i64, i64* %38, align 8
  %323 = load i64, i64* %39, align 8
  %324 = call i32 @PCKEV_H4_SH(i32 %312, i32 %313, i32 %314, i32 %315, i32 %316, i32 %317, i32 %318, i32 %319, i64 %320, i64 %321, i64 %322, i64 %323)
  %325 = load i64, i64* %36, align 8
  %326 = load i64, i64* %37, align 8
  %327 = load i64, i64* %38, align 8
  %328 = load i64, i64* %39, align 8
  %329 = call i32 @SRARI_H4_SH(i64 %325, i64 %326, i64 %327, i64 %328, i32 6)
  %330 = load i64, i64* %36, align 8
  %331 = load i64, i64* %37, align 8
  %332 = load i64, i64* %38, align 8
  %333 = load i64, i64* %39, align 8
  %334 = call i32 @SAT_SH4_SH(i64 %330, i64 %331, i64 %332, i64 %333, i32 7)
  %335 = load i64, i64* %36, align 8
  %336 = load i64, i64* %37, align 8
  %337 = call i32 @PCKEV_XORI128_UB(i64 %335, i64 %336)
  store i32 %337, i32* %16, align 4
  %338 = load i64, i64* %38, align 8
  %339 = load i64, i64* %39, align 8
  %340 = call i32 @PCKEV_XORI128_UB(i64 %338, i64 %339)
  store i32 %340, i32* %17, align 4
  %341 = load i32, i32* %16, align 4
  %342 = load i32, i32* %17, align 4
  %343 = load i32*, i32** %10, align 8
  %344 = load i32, i32* %11, align 4
  %345 = call i32 @ST_W8(i32 %341, i32 %342, i32 0, i32 1, i32 2, i32 3, i32 0, i32 1, i32 2, i32 3, i32* %343, i32 %344)
  %346 = load i32, i32* %11, align 4
  %347 = mul nsw i32 8, %346
  %348 = load i32*, i32** %10, align 8
  %349 = sext i32 %347 to i64
  %350 = getelementptr inbounds i32, i32* %348, i64 %349
  store i32* %350, i32** %10, align 8
  %351 = load i64, i64* %71, align 8
  store i64 %351, i64* %63, align 8
  %352 = load i64, i64* %72, align 8
  store i64 %352, i64* %67, align 8
  %353 = load i64, i64* %54, align 8
  %354 = trunc i64 %353 to i32
  %355 = call i64 @__msa_splati_d(i32 %354, i32 1)
  store i64 %355, i64* %50, align 8
  br label %152

356:                                              ; preds = %152
  ret void
}

declare dso_local i64 @LD_SB(i64) #1

declare dso_local i64 @LD_SH(i32*) #1

declare dso_local i32 @SPLATI_H2_SH(i64, i32, i32, i64, i64) #1

declare dso_local i32 @UNPCK_R_SB_SH(i64, i64) #1

declare dso_local i32 @SPLATI_W2_SH(i64, i32, i64, i64) #1

declare dso_local i32 @LD_SB3(i32*, i32, i64, i64, i64) #1

declare dso_local i32 @XORI_B3_128_SB(i64, i64, i64) #1

declare dso_local i32 @VSHF_B2_SB(i64, i64, i64, i64, i64, i64, i64, i64) #1

declare dso_local i64 @HEVC_FILT_4TAP_SH(i64, i64, i64, i64) #1

declare dso_local i32 @ILVRL_H2_SH(i64, i64, i64, i64) #1

declare dso_local i64 @__msa_splati_d(i32, i32) #1

declare dso_local i32 @LD_SB8(i32*, i32, i64, i64, i64, i64, i64, i64, i64, i64) #1

declare dso_local i32 @XORI_B8_128_SB(i64, i64, i64, i64, i64, i64, i64, i64) #1

declare dso_local i64 @__msa_ilvr_h(i64, i64) #1

declare dso_local i32 @HEVC_FILT_4TAP(i64, i64, i64, i64) #1

declare dso_local i32 @SRA_4V(i32, i32, i32, i32, i32) #1

declare dso_local i32 @PCKEV_H4_SH(i32, i32, i32, i32, i32, i32, i32, i32, i64, i64, i64, i64) #1

declare dso_local i32 @SRARI_H4_SH(i64, i64, i64, i64, i32) #1

declare dso_local i32 @SAT_SH4_SH(i64, i64, i64, i64, i32) #1

declare dso_local i32 @PCKEV_XORI128_UB(i64, i64) #1

declare dso_local i32 @ST_W8(i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
